Tambah fungsi lock data renaksi opd
